fix: temp remove servarr

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -7,16 +7,16 @@ resources:
   # - ./priorityclass.yaml
   # Flux-Kustomizations
   - ./audiobookshelf/ks.yaml
-  - ./bazarr/ks.yaml
+  # - ./bazarr/ks.yaml
   # - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   # - ./jellystat/ks.yaml
-  - ./lidarr/ks.yaml
+  # - ./lidarr/ks.yaml
   - ./navidrome/ks.yaml
-  - ./prowlarr/ks.yaml
-  - ./radarr/ks.yaml
+  # - ./prowlarr/ks.yaml
+  # - ./radarr/ks.yaml
   - ./recyclarr/ks.yaml
-  - ./sonarr/ks.yaml
+  # - ./sonarr/ks.yaml
   - ./unpackerr/ks.yaml
 components:
   # - ../../flux/components/alerts
