--- a/kubernetes/apps/self-hosted/immich/ks.yaml
+++ b/kubernetes/apps/self-hosted/immich/ks.yaml
@@ -11,7 +11,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../flux/components/pvc
+    - ../../../../flux/components/pvc
   dependsOn:
     - name: cloudnative-pg-cluster
     - name: dragonfly-cluster
