--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -2,11 +2,11 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./cloudnative-pg/ks.yaml
-  - ./dragonfly/ks.yaml
-  - ./pgadmin/ks.yaml
+  # - ./cloudnative-pg/ks.yaml
+  # - ./dragonfly/ks.yaml
+  # - ./pgadmin/ks.yaml
   # - ./postgres-backup/ks.yaml
 components:
   # - ../../flux/components/alerts
