--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,18 +6,18 @@ resources:
   # Pre Flux-Kustomizations
   - ./priorityclass.yaml
   # Flux-Kustomizations
-  - ./audiobookshelf/ks.yaml
+  # - ./audiobookshelf/ks.yaml
   # - ./bazarr/ks.yaml
-  - ./jellyfin/ks.yaml
+  # - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   # - ./jellystat/ks.yaml
   # - ./lidarr/ks.yaml
-  - ./navidrome/ks.yaml
+  # - ./navidrome/ks.yaml
   # - ./prowlarr/ks.yaml
   # - ./radarr/ks.yaml
-  - ./recyclarr/ks.yaml
+  # - ./recyclarr/ks.yaml
   # - ./sonarr/ks.yaml
-  - ./unpackerr/ks.yaml
+  # - ./unpackerr/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
