fix: re-deploy hoarder

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
-  # - ./hoarder/ks.yaml
+  - ./hoarder/ks.yaml
   # - ./immich/ks.yaml
   # - ./immich-folder-album-creator/ks.yaml
   # - ./searxng/ks.yaml
