--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./hoarder/ks.yaml
   # - ./immich/ks.yaml
   # - ./immich-folder-album-creator/ks.yaml
-  # - ./searxng/ks.yaml
+  - ./searxng/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
