fix: re-deploy jellyseerr and jellystat

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -9,8 +9,8 @@ resources:
   - ./audiobookshelf/ks.yaml
   - ./bazarr/ks.yaml
   - ./jellyfin/ks.yaml
-  # - ./jellyseerr/ks.yaml
-  # - ./jellystat/ks.yaml
+  - ./jellyseerr/ks.yaml
+  - ./jellystat/ks.yaml
   - ./lidarr/ks.yaml
   - ./navidrome/ks.yaml
   # - ./prowlarr/ks.yaml
