fix: re-deploy utilities resources

--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./atuin/ks.yaml
-  # - ./cyberchef/ks.yaml
-  # - ./it-tools/ks.yaml
-  # - ./jsoncrack/ks.yaml
+  - ./cyberchef/ks.yaml
+  - ./it-tools/ks.yaml
+  - ./jsoncrack/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
