--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -6,8 +6,8 @@ resources:
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
   - ./hoarder/ks.yaml
-  # - ./immich/ks.yaml
-  # - ./immich-folder-album-creator/ks.yaml
+  - ./immich/ks.yaml
+  - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
 components:
   # - ../../flux/components/alerts
