fix(cnpg): complete deployment of cnpg clusters

--- a/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
+++ b/kubernetes/apps/database/cloudnative-pg/cluster/pgvectors/pgvectors.yaml
@@ -55,13 +55,13 @@ spec:
           key: s3-secret-key
   # Note: previousCluster needs to be set to the name of the previous cluster
   # when recovering from an existing CloudNativePG cluster.
-  bootstrap:
-    recovery:
-      source: &previousCluster pgvectors-v2
+  # bootstrap:
+  #   recovery:
+  #     source: &previousCluster pgvectors-v2
   # Note: externalClusters is needed when recovering from an existing
   # CloudNativePG cluster.
-  externalClusters:
-    - name: *previousCluster
-      barmanObjectStore:
-        <<: *barmanObjectStore
-        serverName: *previousCluster
+  # externalClusters:
+  #   - name: *previousCluster
+  #     barmanObjectStore:
+  #       <<: *barmanObjectStore
+  #       serverName: *previousCluster
