--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  # - ./loki/ks.yaml
+  - ./loki/ks.yaml
   # - ./promtail/ks.yaml
   # - ./silence-operator/ks.yaml
   # - ./unpoller/ks.yaml
