--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -1,26 +1,9 @@
 ---
-# Note: Gatus vars should be escaped with $${VAR_NAME} to avoid interpolation by Flux.
-web:
-  port: $${WEB_PORT}
-storage:
-  type: postgres
-  path: postgres://$${INIT_POSTGRES_USER}:$${INIT_POSTGRES_PASS}@$${INIT_POSTGRES_HOST}:5432/$${INIT_POSTGRES_DBNAME}?sslmode=disable
-  caching: true
-metrics: true
-debug: false
-ui:
-  title: Status | Gatus
-  header: Status
-  buttons:
-    - name: Github
-      link: https://github.com/pwyde
-    - name: Homelab
-      link: https://github.com/pwyde/home-ops
 alerting:
   pushover:
     title: Gatus
-    application-token: $${PUSHOVER_TOKEN}
-    user-key: $${PUSHOVER_USER_KEY}
+    application-token: ${PUSHOVER_TOKEN}
+    user-key: ${PUSHOVER_USER_KEY}
     priority: 1
     resolved-priority: 0
     default-alert:
@@ -28,10 +11,12 @@ alerting:
       send-on-resolved: true
       failure-threshold: 3
       success-threshold: 3
+
 connectivity:
   checker:
     target: 1.1.1.1:53
     interval: 1m
+
 endpoints:
   - name: flux-webhook
     group: external
@@ -43,3 +28,24 @@ endpoints:
       - "[STATUS] == 404"
     alerts:
       - type: pushover
+
+metrics: true
+
+storage:
+  type: postgres
+  path: postgres://${INIT_POSTGRES_USER}:${INIT_POSTGRES_PASS}@${INIT_POSTGRES_HOST}:5432/${INIT_POSTGRES_DBNAME}?sslmode=disable
+  caching: true
+
+
+
+ui:
+  title: Status | Gatus
+  header: Status
+  buttons:
+    - name: Github
+      link: https://github.com/pwyde
+    - name: Homelab
+      link: https://github.com/pwyde/home-ops
+
+web:
+  port: ${GATUS_WEB_PORT}
