--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 resources:
   # Flux-Kustomizations
   - ./exporters
-  # - ./gatus/ks.yaml
+  - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
