--- a/kubernetes/apps/observability/gatus/app/resources/config.yaml
+++ b/kubernetes/apps/observability/gatus/app/resources/config.yaml
@@ -1,9 +1,10 @@
 ---
+# Note: Gatus variables should be escaped with $${VAR_NAME} to avoid interpolation by Flux.
 alerting:
   pushover:
     title: Gatus
-    application-token: ${PUSHOVER_TOKEN}
-    user-key: ${PUSHOVER_USER_KEY}
+    application-token: $${PUSHOVER_TOKEN}
+    user-key: $${PUSHOVER_USER_KEY}
     priority: 1
     resolved-priority: 0
     default-alert:
@@ -20,7 +21,7 @@ connectivity:
 endpoints:
   - name: flux-webhook
     group: external
-    url: https://flux-webhook.${SECRET_DOMAIN}
+    url: https://flux-webhook.$${SECRET_DOMAIN}
     interval: 1m
     client:
       dns-resolver: tcp://1.1.1.1:53
@@ -33,10 +34,8 @@ metrics: true
 
 storage:
   type: postgres
-  path: postgres://${INIT_POSTGRES_USER}:${INIT_POSTGRES_PASS}@${INIT_POSTGRES_HOST}:5432/${INIT_POSTGRES_DBNAME}?sslmode=disable
+  path: postgres://$${INIT_POSTGRES_USER}:$${INIT_POSTGRES_PASS}@$${INIT_POSTGRES_HOST}:5432/$${INIT_POSTGRES_DBNAME}?sslmode=disable
   caching: true
-
-
 
 ui:
   title: Status | Gatus
@@ -48,4 +47,4 @@ ui:
       link: https://github.com/pwyde/home-ops
 
 web:
-  port: ${GATUS_WEB_PORT}
+  port: $${GATUS_WEB_PORT}
