--- a/kubernetes/bootstrap/helmfile.yaml
+++ b/kubernetes/bootstrap/helmfile.yaml
@@ -11,8 +11,8 @@ repositories:
   - name: cilium
     url: https://helm.cilium.io
 
-  - name: coredns
-    url: https://coredns.github.io/helm
+  - name: jetstack
+    url: https://charts.jetstack.io
 
 releases:
   - name: kube-prometheus-stack-crds
@@ -38,6 +38,24 @@ releases:
     needs:
       - kube-system/cilium
 
+  - name: cert-manager
+    namespace: security
+    chart: jetstack/cert-manager
+    version: v1.17.0
+    values:
+      - ../apps/security/cert-manager/app/helm-values.yaml
+    needs:
+      - kube-system/coredns
+
+  - name: external-secrets
+    namespace: security
+    chart: oci://ghcr.io/external-secrets/charts/external-secrets
+    version: 0.13.0
+    values:
+      - ../apps/security/external-secrets/app/helm-values.yaml
+    needs:
+      - security/cert-manager
+
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
@@ -45,7 +63,7 @@ releases:
     values:
       - ../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
-      - kube-system/coredns
+      - security/external-secrets
 
   - name: flux-instance
     namespace: flux-system
