chore: move download namespace to new structure

--- a/kubernetes/apps/download/kustomization.yaml
+++ b/kubernetes/apps/download/kustomization.yaml
@@ -2,19 +2,13 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../components/alerts
+  - ../../components/global-vars
+  - ../../components/namespace
+  - ../../components/sops
 resources:
   # Flux-Kustomizations
   - ./flaresolverr/ks.yaml
   - ./pinchflat/ks.yaml
   - ./qbittorrent/ks.yaml
-components:
-  # - ../../flux/components/alerts
-  - ../../flux/components/namespace
-patches:
-  - # Add the name to the namespace.
-    patch: |
-      - op: add
-        path: /metadata/name
-        value: download
-    target:
-      kind: Namespace
