--- a/kubernetes/apps/download/pinchflat/ks.yaml
+++ b/kubernetes/apps/download/pinchflat/ks.yaml
@@ -4,25 +4,20 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app pinchflat
-  namespace: flux-system
+  namespace: &namespace download
 spec:
-  targetNamespace: download
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   components:
-    - ../../../../flux/components/volsync
+    - ../../../../components/volsync
   dependsOn:
     - name: onepassword-store
+      namespace: security
     - name: volsync
-  path: ./kubernetes/apps/download/pinchflat/app
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  wait: false
+      namespace: storage
   interval: 30m
-  timeout: 5m
+  path: ./kubernetes/apps/download/pinchflat/app
   postBuild:
     substitute:
       APP: *app
@@ -37,3 +32,11 @@ spec:
       VOLSYNC_CAPACITY: &capacity 1Gi
       VOLSYNC_CACHE_CAPACITY: *capacity
       VOLSYNC_TIME: "15 3 * * *"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: false
