--- a/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
+++ b/kubernetes/apps/kube-system/nvidia-device-plugin/ks.yaml
@@ -4,19 +4,21 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app nvidia-device-plugin
-  namespace: flux-system
+  namespace: &namespace kube-system
 spec:
-  targetNamespace: kube-system
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
+      namespace: kube-system
+  interval: 30m
   path: ./kubernetes/apps/kube-system/nvidia-device-plugin/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
+  wait: true
