--- a/kubernetes/apps/network/ingress-nginx/ks.yaml
+++ b/kubernetes/apps/network/ingress-nginx/ks.yaml
@@ -3,43 +3,49 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app ingress-nginx-external
-  namespace: flux-system
+  namespace: &namespace network
 spec:
-  targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-certificates
+      namespace: security
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/external
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 15m
+  wait: false
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app ingress-nginx-internal
-  namespace: flux-system
+  namespace: &namespace network
 spec:
-  targetNamespace: network
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: cert-manager-certificates
+      namespace: security
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/network/ingress-nginx/internal
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 15m
+  wait: false
