feat(cilium): add some new settings

--- a/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm-values.yaml
@@ -6,6 +6,7 @@ bpf:
   hostLegacyRouting: true
   # masquerade: false # Required for Talos `.machine.features.hostDNS.forwardKubeDNSToHost`.
   masquerade: true
+  preallocateMaps: true
   tproxy: true
 cgroup:
   automount:
