--- a/kubernetes/apps/observability/exporters/blackbox-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/blackbox-exporter/ks.yaml
@@ -4,17 +4,18 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app blackbox-exporter
-  namespace: flux-system
+  namespace: &namespace observability
 spec:
-  targetNamespace: observability
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
+  interval: 30m
   path: ./kubernetes/apps/observability/exporters/blackbox-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
   wait: false
-  interval: 30m
-  timeout: 15m
