--- a/kubernetes/apps/observability/exporters/qbittorrent-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/qbittorrent-exporter/ks.yaml
@@ -4,19 +4,21 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app qbittorrent-exporter
-  namespace: flux-system
+  namespace: &namespace observability
 spec:
-  targetNamespace: observability
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: qbittorrent
+      namespace: download
+  interval: 30m
   path: ./kubernetes/apps/observability/exporters/qbittorrent-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 15m
+  wait: false
