--- a/kubernetes/apps/observability/exporters/radarr-exporter/ks.yaml
+++ b/kubernetes/apps/observability/exporters/radarr-exporter/ks.yaml
@@ -4,20 +4,23 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app radarr-exporter
-  namespace: flux-system
+  namespace: &namespace observability
 spec:
-  targetNamespace: observability
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: radarr
+      namespace: media
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/observability/exporters/radarr-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 15m
+  wait: false
