--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -2,6 +2,12 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: self-hosted
+components:
+  - ../../components/alerts
+  - ../../components/global-vars
+  - ../../components/namespace
+  - ../../components/sops
 resources:
   # Flux-Kustomizations
   - ./dokuwiki/ks.yaml
@@ -9,14 +15,3 @@ resources:
   - ./immich/ks.yaml
   - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
-components:
-  # - ../../flux/components/alerts
-  - ../../flux/components/namespace
-patches:
-  - # Add the name to the namespace.
-    patch: |
-      - op: add
-        path: /metadata/name
-        value: self-hosted
-    target:
-      kind: Namespace
