--- a/kubernetes/apps/self-hosted/searxng/ks.yaml
+++ b/kubernetes/apps/self-hosted/searxng/ks.yaml
@@ -4,23 +4,23 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app searxng
-  namespace: flux-system
+  namespace: &namespace self-hosted
 spec:
-  targetNamespace: self-hosted
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: dragonfly-cluster
+      namespace: database
     - name: onepassword-store
+      namespace: security
+  interval: 30m
   path: ./kubernetes/apps/self-hosted/searxng/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
-  postBuild:
-    substitute:
-      APP: *app
+  wait: false
