--- a/kubernetes/apps/kube-system/system-upgrade-controller/ks.yaml
+++ b/kubernetes/apps/kube-system/system-upgrade-controller/ks.yaml
@@ -4,44 +4,37 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app system-upgrade-controller
-  namespace: flux-system
+  namespace: &namespace kube-system
 spec:
-  targetNamespace: system-upgrade
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: node-feature-discovery
-  path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/app
+  interval: 30m
+  path: ./kubernetes/apps/kube-system/system-upgrade-controller/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: true
-  interval: 30m
+    namespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
+  wait: true
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kustomize.toolkit.fluxcd.io/kustomization_v1.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app system-upgrade-controller-plans
-  namespace: flux-system
+  name: &app system-upgrade-plans
+  namespace: &namespace kube-system
 spec:
-  targetNamespace: system-upgrade
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: system-upgrade-controller
-  path: ./kubernetes/apps/system-upgrade/system-upgrade-controller/plans
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  wait: false
+      namespace: kube-system
   interval: 30m
-  timeout: 5m
+  path: ./kubernetes/apps/kube-system/system-upgrade-controller/plans
   postBuild:
     substitute:
       # Talos schematic ID for standard (general-purpose) nodes.
@@ -52,3 +45,11 @@ spec:
       TALOS_VERSION: v1.9.2
       # renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
       KUBERNETES_VERSION: v1.32.1
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  targetNamespace: *namespace
+  timeout: 5m
+  wait: true
