chore(flux): add comments

--- a/kubernetes/components/global-vars/cluster-settings.yaml
+++ b/kubernetes/components/global-vars/cluster-settings.yaml
@@ -1,7 +1,9 @@
 ---
+# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.18.1-standalone-strict/configmap-v1.json
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  # These values will be available to all YAML resources as ${VARIABLE_NAME}.
   name: cluster-settings
 data:
   # Configuration
