--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 namespace: ai
 components:
   - ../../components/alerts
-  - ../../components/global-vars
   - ../../components/namespace
   - ../../components/sops
+  - ../../components/substitutions
 resources: []
   # Flux-Kustomizations
   # - ./ollama/ks.yaml
