--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 namespace: media
 components:
   - ../../components/alerts
-  - ../../components/global-vars
   - ../../components/namespace
   - ../../components/sops
+  - ../../components/substitutions
 resources:
   # Pre Flux-Kustomizations
   - ./priorityclass.yaml
