--- a/kubernetes/apps/security/kustomization.yaml
+++ b/kubernetes/apps/security/kustomization.yaml
@@ -5,9 +5,9 @@ kind: Kustomization
 namespace: security
 components:
   - ../../components/alerts
-  - ../../components/global-vars
   - ../../components/namespace
   - ../../components/sops
+  - ../../components/substitutions
 resources:
   # Flux-Kustomizations
   - ./authelia/ks.yaml
