--- a/kubernetes/flux/cluster/ks.yaml
+++ b/kubernetes/flux/cluster/ks.yaml
@@ -4,10 +4,8 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cluster-meta
-  namespace: flux-system
+  namespace: &namespace flux-system
 spec:
-  components:
-    - ../../components/global-vars
   decryption:
     provider: sops
     secretRef:
@@ -20,7 +18,7 @@ spec:
     name: flux-system
     namespace: flux-system
   # Flux repositories under this need flux-system hardcoded as namespace for Renovate lookups.
-  targetNamespace: flux-system
+  targetNamespace: *namespace
   timeout: 5m
   wait: true
 ---
@@ -62,14 +60,6 @@ spec:
         group: kustomize.toolkit.fluxcd.io
         kind: Kustomization
         labelSelector: substitution.flux.home.arpa/disabled notin (true)
-  postBuild:
-    substituteFrom:
-      - kind: ConfigMap
-        name: cluster-settings
-        optional: true
-      - kind: Secret
-        name: cluster-secrets
-        optional: true
   prune: true
   sourceRef:
     kind: GitRepository
