--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -10,12 +10,12 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  - ./exporters
-  - ./gatus/ks.yaml
-  - ./grafana/ks.yaml
+  # - ./exporters
+  # - ./gatus/ks.yaml
+  # - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki/ks.yaml
-  - ./promtail/ks.yaml
-  - ./silence-operator/ks.yaml
-  - ./unpoller/ks.yaml
+  # - ./loki/ks.yaml
+  # - ./promtail/ks.yaml
+  # - ./silence-operator/ks.yaml
+  # - ./unpoller/ks.yaml
