--- a/kubernetes/apps/utilities/kustomization.yaml
+++ b/kubernetes/apps/utilities/kustomization.yaml
@@ -8,9 +8,9 @@ components:
   - ../../components/namespace
   - ../../components/sops
   - ../../components/substitutions
-resources:
+resources: []
   # Flux-Kustomizations
-  - ./atuin/ks.yaml
-  - ./cyberchef/ks.yaml
-  - ./it-tools/ks.yaml
-  - ./jsoncrack/ks.yaml
+  # - ./atuin/ks.yaml
+  # - ./cyberchef/ks.yaml
+  # - ./it-tools/ks.yaml
+  # - ./jsoncrack/ks.yaml
