--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -4,15 +4,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Flux-Kustomizations
-  - ./exporters
-  - ./gatus/ks.yaml
-  - ./grafana/ks.yaml
+  # - ./exporters
+  # - ./gatus/ks.yaml
+  # - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./loki/ks.yaml
-  - ./promtail/ks.yaml
-  - ./silence-operator/ks.yaml
-  - ./unpoller/ks.yaml
+  # - ./loki/ks.yaml
+  # - ./promtail/ks.yaml
+  # - ./silence-operator/ks.yaml
+  # - ./unpoller/ks.yaml
 components:
   # - ../../flux/components/alerts
   - ../../flux/components/namespace
