chore: re-enable jellyfin

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -8,13 +8,13 @@ components:
   - ../../components/namespace
   - ../../components/sops
   - ../../components/substitutions
-resources: []
+resources:
   # Pre Flux-Kustomizations
-  # - ./priorityclass.yaml
+  - ./priorityclass.yaml
   # Flux-Kustomizations
   # - ./audiobookshelf/ks.yaml
   # - ./bazarr/ks.yaml
-  # - ./jellyfin/ks.yaml
+  - ./jellyfin/ks.yaml
   # - ./jellyseerr/ks.yaml
   # - ./jellystat/ks.yaml
   # - ./lidarr/ks.yaml
