chore: re-enable sonarr

--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -22,5 +22,5 @@ resources:
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
   # - ./recyclarr/ks.yaml
-  # - ./sonarr/ks.yaml
+  - ./sonarr/ks.yaml
   # - ./unpackerr/ks.yaml
