chore: re-enable resources in self-hosted namespace

--- a/kubernetes/apps/self-hosted/kustomization.yaml
+++ b/kubernetes/apps/self-hosted/kustomization.yaml
@@ -10,8 +10,8 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  # - ./dokuwiki/ks.yaml
-  # - ./hoarder/ks.yaml
-  # - ./immich/ks.yaml
-  # - ./immich-folder-album-creator/ks.yaml
+  - ./dokuwiki/ks.yaml
+  - ./hoarder/ks.yaml
+  - ./immich/ks.yaml
+  - ./immich-folder-album-creator/ks.yaml
   - ./searxng/ks.yaml
