chore: re-enable exporters

--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -10,7 +10,7 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  # - ./exporters
+  - ./exporters
   - ./gatus/ks.yaml
   - ./grafana/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
