--- a/kubernetes/apps/kube-system/system-upgrade-controller/plans/kustomization.yaml
+++ b/kubernetes/apps/kube-system/system-upgrade-controller/plans/kustomization.yaml
@@ -4,5 +4,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./kubernetes.yaml
-  - ./talos-gpu.yaml
-  - ./talos-standard.yaml
+  - ./talos.yaml
