--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
     "security": "folder_admin",
     "self-hosted": "folder_public",
     "storage": "folder_content",
+    "system": "folder_kubernetes",
     "system-upgrade": "folder_components",
     "system-upgrade-controller": "folder_components",
     "utilities": "folder_utils",
@@ -95,6 +96,7 @@
     "security": "guard",
     "self-hosted": "home",
     "storage": "dump",
+    "system": "kubernetes",
     "system-upgrade": "update",
     "system-upgrade-controller": "update",
     "utilities": "utils",
