--- a/kubernetes/apps/system/generic-device-plugin/ks.yaml
+++ b/kubernetes/apps/system/generic-device-plugin/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app generic-device-plugin
-  namespace: &namespace kube-system
+  namespace: &namespace system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/apps/kube-system/generic-device-plugin/app
+  path: ./kubernetes/apps/system/generic-device-plugin/app
   prune: true
   sourceRef:
     kind: GitRepository
