--- a/kubernetes/apps/system/kustomization.yaml
+++ b/kubernetes/apps/system/kustomization.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: kube-system
+namespace: system
 components:
   - ../../components/alerts
   - ../../components/namespace
@@ -10,6 +10,11 @@ components:
   - ../../components/substitutions
 resources:
   # Flux-Kustomizations
-  - ./cilium/ks.yaml
-  - ./coredns/ks.yaml
-  - ./metrics-server/ks.yaml
+  - ./generic-device-plugin/ks.yaml
+  - ./node-feature-discovery/ks.yaml
+  - ./node-problem-detector/ks.yaml
+  - ./nvidia-device-plugin/ks.yaml
+  - ./reloader/ks.yaml
+  - ./spegel/ks.yaml
+  - ./system-upgrade-controller/ks.yaml
+  # - ./talos-debug-tools/ks.yaml
