--- a/kubernetes/apps/system/node-feature-discovery/ks.yaml
+++ b/kubernetes/apps/system/node-feature-discovery/ks.yaml
@@ -4,13 +4,13 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app node-feature-discovery
-  namespace: &namespace kube-system
+  namespace: &namespace system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/apps/kube-system/node-feature-discovery/app
+  path: ./kubernetes/apps/system/node-feature-discovery/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,16 +25,16 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app node-feature-discovery-rules
-  namespace: &namespace kube-system
+  namespace: &namespace system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
     - name: node-feature-discovery
-      namespace: kube-system
+      namespace: system
   interval: 30m
-  path: ./kubernetes/apps/kube-system/node-feature-discovery/rules
+  path: ./kubernetes/apps/system/node-feature-discovery/rules
   prune: true
   sourceRef:
     kind: GitRepository
