--- a/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/system/nvidia-device-plugin/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
       retries: 3
   dependsOn:
     - name: node-feature-discovery
-      namespace: kube-system
+      namespace: system
   values:
     affinity:
       nodeAffinity:
