--- a/kubernetes/apps/system/spegel/ks.yaml
+++ b/kubernetes/apps/system/spegel/ks.yaml
@@ -3,17 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app nvidia-device-plugin
-  namespace: &namespace kube-system
+  name: &app spegel
+  namespace: &namespace system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  dependsOn:
-    - name: node-feature-discovery
-      namespace: kube-system
   interval: 30m
-  path: ./kubernetes/apps/kube-system/nvidia-device-plugin/app
+  path: ./kubernetes/apps/system/spegel/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -21,4 +18,4 @@ spec:
     namespace: flux-system
   targetNamespace: *namespace
   timeout: 5m
-  wait: true
+  wait: false
