--- a/kubernetes/apps/system/talos-debug-tools/ks.yaml
+++ b/kubernetes/apps/system/talos-debug-tools/ks.yaml
@@ -3,14 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app reloader
-  namespace: &namespace kube-system
+  name: &app talos-debug-tools
+  namespace: &namespace system
 spec:
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
   interval: 30m
-  path: ./kubernetes/apps/kube-system/reloader/app
+  path: ./kubernetes/apps/system/talos-debug-tools/app
   prune: true
   sourceRef:
     kind: GitRepository
