feat: move cluster resources from kybe-system to system namespace

--- a/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/download/qbittorrent/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
     - name: democratic-csi-nfs
       namespace: storage
     - name: generic-device-plugin
-      namespace: kube-system
+      namespace: system
   values:
     controllers:
       qbittorrent:
