fix(taskfile): prometheus operator crds does not need flux management

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -70,6 +70,8 @@ tasks:
       - until kubectl wait nodes --for=condition=Ready=False --all --timeout=600s; do sleep 10; done
       - op inject --in-file {{.KUBERNETES_DIR}}/bootstrap/templates/resources.tmpl.yaml | kubectl apply --server-side --filename -
       - helmfile --file {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml apply --skip-diff-on-install --suppress-diff
+      - for: ['prometheus-operator-crds']
+        cmd: helmfile --quiet --file {{.KUBERNETES_DIR}}/bootstrap/helmfile.yaml destroy --selector name={{.ITEM}}
     env:
       VAULT: Kubernetes
     preconditions:
